Optimise code coverage (#159)